@@ -1,3 +1,7 @@
+1998-08-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* actcltk.m4: Re-evaluate directories before testing for files.
+
 1998-08-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* Makefile.am (EXTRA_DIST): Add aclinkflags.m4.
